Done with tutorial

--- a/articles/templates/article_detail.html
+++ b/articles/templates/article_detail.html
@@ -1,5 +1,5 @@
 <!-- article_detail.html -->
 <div>
-    <h2>{{ object.title }</h2>
+    <h2>{{ object.title }}</h2>
     <p>{{ object.body }}</p>
   </div>
